archetect-templating/tests/snapshots/test_lexer__lexer@basic.txt.snap
---
source: archetect_minijinja/tests/test_lexer.rs
description: "Hello {{ name }}!"
input_file: archetect_minijinja/tests/lexer-inputs/basic.txt
---
TemplateData("Hello ")
  "Hello "
VariableStart
  "{{"
Ident("name")
  "name"
VariableEnd
  "}}"
TemplateData("!\n")
  "!\n"

