archetect-templating/tests/snapshots/test_lexer__lexer@block-filter.txt.snap
---
source: archetect_templating/tests/test_lexer.rs
description: "{% for item in seq -%}\n  {{ item }}{% endfor %}"
input_file: archetect_templating/tests/lexer-inputs/block-filter.txt
---
BlockStart
  "{%"
Ident("for")
  "for"
Ident("item")
  "item"
Ident("in")
  "in"
Ident("seq")
  "seq"
BlockEnd
  "-%}"
VariableStart
  "{{"
Ident("item")
  "item"
VariableEnd
  "}}"
BlockStart
  "{%"
Ident("endfor")
  "endfor"
BlockEnd
  "%}"
TemplateData("\n")
  "\n"

