archetect-templating/tests/snapshots/test_lexer__lexer@raw.txt.snap
---
source: archetect_minijinja/tests/test_lexer.rs
description: "before {% raw %} this is a {{ raw }} {% block %} {% endraw %} after\n\nbefore {%- raw %} this is a {{ raw }} {% block %} {% endraw -%} after\n\nbefore {%- raw -%} this is a {{ raw }} {% block %} {%- endraw -%} after"
input_file: archetect_minijinja/tests/lexer-inputs/raw.txt
---
TemplateData("before ")
  "before "
TemplateData("{% raw %} this is a {{ raw }} {% block %} {% endraw %}")
  "{% raw %} this is a {{ raw }} {% block %} {% endraw %}"
TemplateData(" after\n\nbefore")
  " after\n\nbefore"
TemplateData("{%- raw %} this is a {{ raw }} {% block %} {% endraw -%}")
  "{%- raw %} this is a {{ raw }} {% block %} {% endraw -%}"
TemplateData("after\n\nbefore")
  "after\n\nbefore"
TemplateData("{%- raw -%} this is a {{ raw }} {% block %} {%- endraw -%}")
  "{%- raw -%} this is a {{ raw }} {% block %} {%- endraw -%}"
TemplateData("after")
  "after"

